# LAME

./: CHANGELOG.md  README.md  bun.lockb  index.html  package.json  pnpm-lock.yaml  release-please-config.json  tailwind.config.js  tsconfig.json
.github/workflows/: build.yml  pr.yml
src/: App.tsx  main.tsx  styles.css
src-tauri/: CHANGELOG.md  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  parser.rs  vault.rs
src/components/: Filetree.tsx  Menu.tsx  Sidebar.tsx  TaskbarSpace.tsx  VaultPrompt.tsx
src/components/Common/: ContextMenuWrapper.tsx
src/components/common/: Kbd.tsx
src/components/editor/: MenuBar.tsx  index.tsx  tiptap.scss
src/components/settings/: SettingsGeneral.tsx  SettingsShortcuts.tsx  index.tsx
src/hooks/: index.ts  useCmdk.tsx  useConfig.tsx  useContextMenu.tsx  useFiletree.tsx  useServer.tsx  useSettings.tsx  useSidebar.tsx  useVault.tsx
src/pages/: Dashboard.tsx  Login.tsx  Onboard.tsx  index.ts
src/styles/: main.css
src/utils/: config.ts  fs.ts  index.ts
src/utils/server/: index.ts  login.ts
