version = "0.1.0"

[package]
name = "lame"
version = "0.0.1"
description = "Just another super minimalistic markdown editor"
authors = [ "Yumi <mail@yumi.to>" ]
license = "MIT License"
repository = "https://github.com/izyumidev/LAME"
edition = "2021"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[build-dependencies.tauri-build]
version = "1.5"
features = [ ]

[dependencies]
serde_json = "1.0"
tokio = "1.35.1"
markdown = "1.0.0-alpha.16"
html2md-rs = "0.1.1"

  [dependencies.tauri]
  version = "1.5"
  features = [
  "dialog-all",
  "path-all",
  "fs-all",
  "window-all",
  "macos-private-api"
]

  [dependencies.serde]
  version = "1.0"
  features = [ "derive" ]

  [dependencies.tauri-plugin-store]
  git = "https://github.com/tauri-apps/plugins-workspace"
  branch = "v1"

  [dependencies.tauri-plugin-fs-watch]
  git = "https://github.com/tauri-apps/plugins-workspace"
  branch = "v1"

[features]
custom-protocol = [ "tauri/custom-protocol" ]
